# Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "lf_scalacopts_stricter",
)
load("//:canton_dep.bzl", "canton")

java_binary(
    name = "canton",
    main_class = "com.digitalasset.canton.CantonCommunityApp",
    visibility = ["//visibility:public"],
    runtime_deps = [
        # Do not sort
        "//canton:lib",
    ],
)

# We replace engine and archive classes in canton
# This should be used for testing only
java_binary(
    name = "canton-patched",
    main_class = "com.digitalasset.canton.CantonCommunityApp",
    visibility = ["//visibility:public"],
    runtime_deps = [
        # The following prevents buildifier from sorting the deps
        # Do not sort
        "//daml-lf/engine",
        "//daml-lf/archive:daml_lf_archive_reader",
        "//canton:lib",
    ],
)

genrule(
    name = "canton-lib",
    srcs = [":lib/canton.jar"] if canton["local"] else ["@canton//:jar"],
    outs = ["canton-lib.jar"],
    cmd = """
    set -euo pipefail

    cp $(location {src}) $@
    """.format(src = ":lib/canton.jar" if canton["local"] else "@canton//:jar"),
    visibility = ["//visibility:public"],
)

java_import(
    name = "lib",
    jars = [":canton-lib.jar"],
    visibility = ["//visibility:public"],
)
