cabal-version: 2.4
name: daml-project-config
build-type: Simple
version: 0.1.0
synopsis: daml project config
license: Apache-2.0
author: Digital Asset
maintainer: Digital Asset
copyright: Digital Asset 2020
homepage: https://github.com/digital-asset/daml#readme
bug-reports: https://github.com/digital-asset/daml/issues

source-repository head
    type: git
    location: https://github.com/digital-asset/daml.git

library
    default-language: Haskell2010
    hs-source-dirs: daml-project-config
    build-depends:
      base,
      directory,
      extra,
      filepath,
      lens,
      safe-exceptions,
      semver,
      text,
      yaml
    exposed-modules:
      DA.Daml.Project.Config
      DA.Daml.Project.Consts
      DA.Daml.Project.Types
      DA.Daml.Project.Util
    default-extensions:
      GeneralizedNewtypeDeriving
      LambdaCase
      OverloadedStrings
