load("//bazel_tools:haskell.bzl", "da_haskell_binary", "da_haskell_library")
load("@rules_haskell//haskell:cabal.bzl", "haskell_cabal_library")

da_haskell_binary(
  name = "debug-ghci",
  srcs = ["Main.hs"],
  hackage_deps = [
  "base",
  ],
  deps = [
       ":foobar",
#"@stackage//:grpc-haskell-core",
  ],
)

da_haskell_library(
  name = "foobar",
  srcs = [],
  deps = [
       "@grpc_haskell_core//:fat_cbits",
  ],
)
