load("//bazel_tools:haskell.bzl", "da_haskell_binary", "da_haskell_library", "da_haskell_repl")
load("@rules_haskell//haskell:cabal.bzl", "haskell_cabal_library")

da_haskell_binary(
  name = "debug-ghci",
  srcs = ["Main.hs"],
  hackage_deps = [
  "base",
  ],
  deps = [
       ":foobar",
#"@stackage//:grpc-haskell-core",
  ],
)

da_haskell_repl(
    name = "repl",
    deps = [":debug-ghci"],
    experimental_from_binary = [
    ":foobar",
    ],
)

da_haskell_library(
  name = "foobar",
  srcs = ["Lib.hs"],
  hackage_deps = ["base"],
  deps = [
       "@grpc_haskell_core//:fat_cbits",
  ],
)
