load("//bazel_tools:haskell.bzl", "da_haskell_binary", "da_haskell_library", "da_haskell_repl")
load("@rules_haskell//haskell:cabal.bzl", "haskell_cabal_library")

da_haskell_binary(
  name = "debug-ghci",
  srcs = ["Main.hs"],
  hackage_deps = [
  "base",
  ],
  deps = [
"@stackage//:grpc-haskell-core",
  ],
)

